Working on fixing the navbar and getting the dropdown to align… still not working properly

--- a/styles/css/index.scss
+++ b/styles/css/index.scss
@@ -5,6 +5,7 @@ $lightCoral: #F1948A;
 $darkCoral: #CD6155;
 $teal: #45B39D;
 $purple: #512E5F;
+$mainFont: Dekko, cursive, san serif;
 
 //Navigation Bar
 #top-bar {
@@ -15,19 +16,43 @@ $purple: #512E5F;
   background-origin: initial;
   background-clip: initial;
   background-color: rgb(246, 245, 243);
-
-
 }
+
 #nav-wrapper{
-  ul{
-    li{
-      text-decoration:none;
-      a{
+  ul li{
+      list-style-type: none;
+      float:left;
       color:$navy;
+      font-size:20px;
+      padding: 10;
+      .dropdown{
+        display:inline-block;
+          .dropdown-content{
+            display:none;
+            position:absolute;
+            background-color: $lightCoral;
+            min-width:160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            a{
+              font-size:15px;
+              color: $navy;
+              background-color: $teal;
+              display:block;
+              text-align:left;
+            }
+            a:hover{
+
+            }
+          }
+        }
+      }
+      a{
       text-decoration:none;
       }
-    }
-  }
+      a:hover{
+        color:$lightBlue;
+        text-decoration:underline;
+      }
 }
 .headerTitle{
   background-image: url(Pictures/bbw-running.jpg);
@@ -38,6 +63,7 @@ $purple: #512E5F;
 .mainInfo{
   h1{
     color:$lightCoral;
+    font-family: $mainFont;
   }
   background-color:$lightBlue;
 }
