--- a/styles/css/newindex.css
+++ b/styles/css/newindex.css
@@ -8,10 +8,30 @@
   background-color: #f6f5f3; }
 
 #nav-wrapper ul li {
+  list-style-type: none;
+  float: left;
+  color: #34495E;
+  font-size: 20px;
+  padding: 10; }
+  #nav-wrapper ul li .dropdown {
+    display: inline-block; }
+    #nav-wrapper ul li .dropdown .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #F1948A;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); }
+      #nav-wrapper ul li .dropdown .dropdown-content a {
+        font-size: 15px;
+        color: #34495E;
+        background-color: #45B39D;
+        display: block;
+        text-align: left; }
+#nav-wrapper a {
   text-decoration: none; }
-  #nav-wrapper ul li a {
-    color: #34495E;
-    text-decoration: none; }
+#nav-wrapper a:hover {
+  color: #7FB3D5;
+  text-decoration: underline; }
 
 .headerTitle {
   background-image: url(Pictures/bbw-running.jpg);
@@ -22,6 +42,7 @@
 .mainInfo {
   background-color: #7FB3D5; }
   .mainInfo h1 {
-    color: #F1948A; }
+    color: #F1948A;
+    font-family: Dekko, cursive, san serif; }
 
 /*# sourceMappingURL=newindex.css.map */
